Date Formatting Complete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   logger: ^1.1.0
   shimmer: ^2.0.0
   http: ^0.13.4
+  intl: ^0.17.0
+  jiffy: ^5.0.0
 
 dev_dependencies:
   flutter_test:
